--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "konva": "^8.3.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-konva": "^18.1.1",
     "react-query": "^3.17.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
