--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-konva": "^18.1.1",
+    "react-lasso-select": "^1.2.2",
     "react-query": "^3.17.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
