--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 click==8.1.3
+commonmark==0.9.1
 Flask==2.1.2
+Flask-Cors==3.0.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+meshio==5.3.4
 numpy==1.22.4
 opencv-python==4.6.0.66
+pygalmesh==0.10.6
+Pygments==2.12.0
+rich==12.4.4
+six==1.16.0
 Werkzeug==2.1.2
